[gd_scene load_steps=4 format=3 uid="uid://dlmntq0f0h612"]

[ext_resource type="Script" uid="uid://cci3pcdej5ews" path="res://scripts/player_hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.8, 0.15, 0.15, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="StatsPanel" type="PanelContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 110.0

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HealthBar" type="ProgressBar" parent="StatsPanel/VBoxContainer"]
custom_minimum_size = Vector2(180, 24)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="StatsPanel/VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StrengthLabel" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "STR: x1.0"

[node name="SpeedLabel" type="Label" parent="StatsPanel/VBoxContainer"]
layout_mode = 2
text = "SPD: x1.0"

[node name="BoonsPanel" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1275.0
offset_top = 121.0
offset_right = -1075.0
offset_bottom = 181.0
grow_horizontal = 0

[node name="BoonsContainer" type="HBoxContainer" parent="BoonsPanel"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2
